--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Tributo - </title>
 </head>
 <body>
-  <h2>Testando conexão</h2>  
+  <h2>Testando conexão com mudança de autor</h2>  
 </body>
 </html>
