--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tributo - </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h2>Testando conexão com mudança de autor</h2>  
